Create card and jobCard components

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -25,6 +25,14 @@ button {
   cursor: pointer;
 }
 
+li{
+  list-style: none;
+}
+
+p{
+  line-height: 1.5;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
