--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,4 +1,11 @@
 $backgroundPrimary: #10101A;
 $textColor: #F0F0F0;
-$textSecondary: #AAAAAA;
+$textSecondary:#BABABA;
+$textSecondary2: #AAAAAA;
 $accentColor: #9370DB;
+
+$textXS: 12px;
+$textS: 14px;
+$textL: 16px;
+$textXL: 20px;
+$textXXL: 25px;
