--- a/src/app/components/Job/styles.module.scss
+++ b/src/app/components/Job/styles.module.scss
@@ -12,3 +12,9 @@
     color: $textSecondary2;
     text-transform: uppercase;
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
