Create Project list

--- a/src/app/components/Card/card.module.scss
+++ b/src/app/components/Card/card.module.scss
@@ -16,6 +16,9 @@
         display: grid;
         z-index: 1;
         gap: 1rem;
+        aside{
+            margin-top: 5px;
+        }
         aside.footer{
             order: 1;
         }
