--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -6,6 +6,9 @@ $accentColor: #9370DB;
 
 $textXS: 12px;
 $textS: 14px;
-$textL: 16px;
+$textBase: 16px;
+$textLG:18px;
 $textXL: 20px;
-$textXXL: 25px;
+$text2XL: 24px;
+$text3XL:30px;
+$text4XL:36px;
