--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -12,3 +12,8 @@ $textXL: 20px;
 $text2XL: 24px;
 $text3XL:30px;
 $text4XL:36px;
+$text5XL:48px;
+$text6XL:60px;
+$text7XL:72px;
+$text8XL:96px;
+$text9XL:128px;
