--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -10,6 +10,9 @@
     .description{
         color: $textSecondary;
         margin-bottom: 1rem;
+        span{
+            font-weight: bold;
+        }
     }
     .navContainer{
         margin-top: 5rem;
