--- a/src/app/components/Card/card.module.scss
+++ b/src/app/components/Card/card.module.scss
@@ -4,9 +4,10 @@
 
 .card{
     
-    h3{
-        font-size: $textXL;
+    .title{
+        font-size: $textBase;
         margin-bottom: 15px;
+        text-transform: capitalize;
         &:hover{
             color: $accentColor;
             transition: color .3s ease-out;
@@ -45,6 +46,9 @@
             }
             aside.footer{
                 order: initial;
+            }
+            .title{
+                font-size: $textLG;
             }
         }   
     }    
